--- a/index.html
+++ b/index.html
@@ -169,6 +169,6 @@
 				</div>
 			</li>
 		</template>
-		<script src="./assets/js/index.js" type="text/javascript" defer></script>
+		<script src="./assets/js/index.min.js" type="text/javascript" defer></script>
 	</body>
 </html>
