--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 								</ul>
 							</div>
 						</div>
-						<div class="back"><span>umbrella corp.</span></div>
+						<div class="back"><span>Umbrella corp.</span></div>
 					</div>
 				</div>
 				<!-- USER CARD -->
@@ -106,7 +106,7 @@
 							</div>
 						</div>
 						<div class="back">
-							<span>umbrella corp.</span>
+							<span>Umbrella corp.</span>
 						</div>
 					</div>
 				</div>
