--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 		<link rel="preload" as="image" href="./assets/image/umbrella-svg-logo.svg"/>
 		<link rel="preload" as="image" href="./assets/image/sp-re-logo.png"/>
 		<link
-			rel="stylesheet"
+			rel="preload"
+			as="style"
+			onload="this.onload=null;this.rel='stylesheet';"
 			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
 			integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
 			crossorigin="anonymous"
