change logo from png to webp format

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 		</main>
 		<footer>
 			<div>
-				<img class="footer__logo" src="./assets/image/sp-re-logo.png" width="842" height="598" alt="Super Trumps Resident Evil logo">
+				<img class="footer__logo" src="./assets/image/sp-re-logo.webp" width="842" height="598" alt="Super Trumps Resident Evil logo">
 			</div>
 			<div class="dev">
 				<p>created by <a href="#">diêgo sousa</a></p>
