--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 				srcset="./assets/image/sp-re-logo-320.webp 320w,
 				./assets/image/sp-re-logo-480.webp 480w,
 				./assets/image/sp-re-logo-640.webp 640w"
-				sizes="((min-width: 320px) and (max-width: 395px)) 240px, ((min-width: 480px) and (max-width: 600px))320px, ((min-width: 768px) and (max-width: 1280px))480px, (min-width: 1024px) 640w"
+				sizes="20vw"
 				alt="Super Trumps Resident Evil logo">
 			</div>
 			<div class="dev">
