--- a/index.html
+++ b/index.html
@@ -148,11 +148,7 @@
 		<footer>
 			<div>
 				<img class="footer__logo" 
-				src="./assets/image/sp-re-logo-240.webp" 
-				srcset="./assets/image/sp-re-logo-320.webp 320w,
-				./assets/image/sp-re-logo-480.webp 480w,
-				./assets/image/sp-re-logo-640.webp 640w"
-				sizes="20vw"
+				src="./assets/image/sp-re-logo-svg.svg" 
 				alt="Super Trumps Resident Evil logo">
 			</div>
 			<div class="dev">
