--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
 		<link rel="preload" as="image" href="./assets/image/umbrella-svg-logo.svg"/>
 		<link rel="preload" as="image" href="./assets/image/umbrella-mobile-logo.webp"/>
 		<link
-			rel="preload"
-			as="style"
-			onload="this.onload=null;this.rel='stylesheet';"
+			rel="stylesheet"
 			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
 			integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
 			crossorigin="anonymous"
@@ -19,7 +17,7 @@
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet" />
-		<link href="https://fonts.cdnfonts.com/css/led-digital-7" rel="preload" as="style" onload="this.onload=null;this.rel='stylesheet';" />
+		<!--<link href="https://fonts.cdnfonts.com/css/led-digital-7" rel="stylesheet" /> -->
 		<link rel="stylesheet" href="./assets/css/vars.min.css" />
 		<link rel="stylesheet" href="./assets/css/cards.min.css" />
 		<link rel="stylesheet" href="./assets/css/main.min.css" />
