add changes to the color pallete
add some layout changes

--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
 		<title>Super Trumps RE 2024</title>
 		<meta name="description" content="Enjoy the Super Trumps with Resident Evil characters" />
 		<link rel="stylesheet" href="./assets/css/reset.min.css" />
-		<link rel="preload" as="image" href="./assets/image/umbrella-svg-logo.svg"/>
 		<link rel="preload" as="image" href="./assets/image/umbrella-mobile-logo.webp"/>
 		<link
 			rel="stylesheet"
@@ -114,9 +113,7 @@
 								</ul>
 							</div>
 						</div>
-						<div class="back">
-							<span>Umbrella corp.</span>
-						</div>
+						<div class="back"><span>Umbrella corp.</span></div>
 					</div>
 				</div>
 				<!-- USER POINTS -->
@@ -157,12 +154,12 @@
 				<img class="footer__logo" 
 				src="./assets/image/sp-re-logo-svg.svg" 
 				alt="Super Trumps Resident Evil logo">
+				<a href="https://github.com/DiegoSousa123/super-trunfo-2024">Go to repository</a>
 			</div>
 			<div class="dev">
 				<p>created by <a href="#">diêgo sousa</a></p>
 				<div class="contact">
 					<a href=""><i class="fa-brands fa-github"></i><em>Diêgo Sousa on github</em></a>
-					<a href=""><i class="fa-brands fa-codepen"></i><em>Diêgo Sousa on codepen</em></a>
 				</div>
 			</div>
 			<div>
