--- a/index.html
+++ b/index.html
@@ -3,19 +3,20 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Super Trumps RE 2024</title>
-		<meta name="description" content="Enjoy the Super Trumps with Resident Evil characters" />
-		<link rel="stylesheet" href="./assets/css/reset.min.css" />
-		<link rel="preload" as="image" href="./assets/image/umbrella-mobile-logo.webp"/>
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Oxygen:wght@300;400;700&display=swap" rel="stylesheet">
 		<link
 			rel="stylesheet"
 			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
 			integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
 			crossorigin="anonymous"
 			referrerpolicy="no-referrer" />
-		<link rel="preconnect" href="https://fonts.googleapis.com" />
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-		<link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet" />
+		<title>Super Trumps RE 2024</title>
+		<meta name="description" content="Enjoy the Super Trumps with Resident Evil characters" />
+		<link rel="stylesheet" href="./assets/css/reset.min.css" />
+		<link fetchpriority="high" rel="preload" as="image" href="./assets/image/umbrella-mobile-logo.webp"/> 
+		
 		<!--<link href="https://fonts.cdnfonts.com/css/led-digital-7" rel="stylesheet" /> -->
 		<link rel="stylesheet" href="./assets/css/vars.min.css" />
 		<link rel="stylesheet" href="./assets/css/cards.min.css" />
@@ -35,26 +36,20 @@
 				</dialog>
 				<!-- COMPUTER POINTS -->
 				<div class="computer__points">
-					<p class="points__title"><strong>Pc</strong></p>
+					<p class="points__title"><strong><i class="fa-solid fa-computer"></i></strong></p>
 					<div class="points__numbers">
 						<span>00</span>
 						<span class="points" id="pt-computer">0</span>
 					</div>
+					<!-- COMPUTER DECK -->
+					<div class="deck computer-deck">
+						<span data-remains-cards="computer">10</span>
+						<ul>
+							<!-- something here -->
+						</ul>
+					</div>
 				</div>
-				<!-- COMPUTER DECK -->
-				<div class="deck computer-deck">
-					<span data-remains-cards="computer">10</span>
-					<ul>
-						<!-- something here -->
-					</ul>
-				</div>
-				<!-- USER DECK  -->
-				<div class="deck user-deck">
-					<span data-remains-cards="user">10</span>
-					<ul>
-						<!-- something here -->
-					</ul>
-				</div>
+				
 				<!-- COMPUTER CARD -->
 				<div class="card__view" data-player="computer">
 					<div class="card card--computer" id="machine">
@@ -118,10 +113,17 @@
 				</div>
 				<!-- USER POINTS -->
 				<div class="user__points">
-					<p class="points__title"><strong>You</strong></p>
+					<p class="points__title"><strong><i class="fa-solid fa-user"></i></strong></p>
 					<div class="points__numbers">
 						<span>00</span>
 						<span class="points" id="pt-user">0</span>
+					</div>
+					<!-- USER DECK  -->
+					<div class="deck user-deck">
+						<span data-remains-cards="user">10</span>
+						<ul>
+						<!-- something here -->
+						</ul>
 					</div>
 				</div>
 				<div class="game__actions">
