--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 				<div class="initial__menu" id="initial-menu">
 					<h1>SP-RE 2024</h1>
 					<button class="menu__start" id="button-start">Start</button>
-					<button class="menu__help" id="button-help">
+					<button class="menu__help" id="button-help" title="Help button">
 							<i class="fa-solid fa-circle-question"></i>
 					</button>
 				</div>
@@ -167,9 +167,9 @@
 				<a href="https://github.com/DiegoSousa123/super-trunfo-2024">Go to repository</a>
 			</div>
 			<div class="dev">
-				<p>created by <a href="#">diêgo sousa</a></p>
+				<p>created by diêgo sousa</p>
 				<div class="contact">
-					<a href=""><i class="fa-brands fa-github"></i><em>Diêgo Sousa on github</em></a>
+					<a href="https://github.com/DiegoSousa123"><i class="fa-brands fa-github"></i><em>Diêgo Sousa on github</em></a>
 				</div>
 			</div>
 			<div>
