--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
 				display: none;
 			}
 		</style>
-		<link rel="stylesheet" href="./assets/css/reset.min.css" />
-		<link rel="stylesheet" href="./assets/css/vars.min.css" />
-		<link rel="stylesheet" href="./assets/css/cards.min.css" />
-		<link rel="stylesheet" href="./assets/css/main.min.css" />
+		<link rel="stylesheet" href="./assets/css/reset.css" />
+		<link rel="stylesheet" href="./assets/css/vars.css" />
+		<link rel="stylesheet" href="./assets/css/cards.css" />
+		<link rel="stylesheet" href="./assets/css/main.css" />
 	</head>
 	<body>
 		<main>
